# LINQ

./: .gitignore  main.py  pyproject.toml
listener/: functions.py  listener.py  listener_core.py  paragraphs.yaml  utils.py
utils/: mongo.py  sql.py
